@@ -118,7 +118,7 @@ proc Cleanup {in out bytes {error {}}} {
     close $in
     close $out
     if {[string length $error] != 0} {
-	# error occurred during the copy
+        # error occurred during the copy
     }
 }
 set in [open $file1]
@@ -135,11 +135,11 @@ proc CopyMore {in out chunk bytes {error {}}} {
     global total done
     incr total $bytes
     if {([string length $error] != 0) || [eof $in]} {
-	set done $total
-	close $in
-	close $out
+        set done $total
+        close $in
+        close $out
     } else {
-	\fBfcopy\fR $in $out -size $chunk \e
+        \fBfcopy\fR $in $out -size $chunk \e
                 -command [list CopyMore $in $out $chunk]
     }
 }
